external-crates/move/crates/move-compiler/tests/move_check/parser/address_misspelled.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/address_misspelled.move:1:1
  │
1 │ addrexx 0x1:
  │ ^^^^^^^ Invalid code unit. Expected 'address' or 'module'. Got 'addrexx'
